--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
+    "prisma": "prisma generate --schema src/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^7.4.0"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/gradient-string": "^1.1.2",
+    "@types/node": "^18.8.3",
+    "concurrently": "^7.4.0",
+    "dotenv": "^16.0.3",
+    "prisma": "^4.4.0"
+  },
+  "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.5.5",
+    "@graphql-tools/load": "^7.7.7",
+    "@prisma/client": "^4.4.0",
+    "apollo-server-express": "^3.10.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "gradient-string": "^2.0.2",
+    "graphql": "^16.6.0"
   }
 }
