--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
+    "graphql": "^16.6.0",
     "loader-utils": "^3.2.0",
     "mangle-css-class-webpack-plugin": "^5.0.8",
     "next": "12.3.1",
