--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "mangle-css-class-webpack-plugin": "^5.0.8",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-textarea-autosize": "^8.3.4"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
