--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-textarea-autosize": "^8.3.4"
   },
   "devDependencies": {
