--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@badrap/bar-of-progress": "^0.2.2",
     "graphql": "^16.6.0",
     "loader-utils": "^3.2.0",
     "mangle-css-class-webpack-plugin": "^5.0.8",
